fix handling multiple categories